<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/note_update_at"
        style="@style/Widget.Note.TextView"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/margin_between_elements"
        android:text="@string/last_update"
        android:textSize="11sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note_title"
        style="@style/Widget.Note.TextView"
        android:layout_marginHorizontal="@dimen/margin_between_elements"
        android:text="@string/note_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_update_at" />

    <TextView
        android:id="@+id/note_text"
        style="@style/Widget.Note.TextView"
        android:layout_below="@+id/note_title"
        android:layout_marginHorizontal="@dimen/margin_between_elements"
        android:text="@string/note_text"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_title" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_margin="@dimen/margin_between_elements"
        app:layout_constraintTop_toBottomOf="@+id/note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>